--- a/.github/workflows/update-notices.yaml
+++ b/.github/workflows/update-notices.yaml
@@ -76,6 +76,7 @@ jobs:
   
   Merge:
     name: Merge licenses
+    needs: Scan
     runs-on: ubuntu-latest
     env:
       os_artifacts: ("windows" "ubuntu" "macos")
