--- a/.github/workflows/update-notices.yaml
+++ b/.github/workflows/update-notices.yaml
@@ -48,32 +48,33 @@ jobs:
       - name: Configure environment
         run: |
           if [ "$RUNNER_OS" == "Windows" ]; then
-            ${{ github.workspace }}\o3de\python\get_python.bat
+            ${{ github.workspace }}/o3de/python/get_python.bat
           else
-            ${{ github.workspace }}\o3de\python\get_python.sh
+            ${{ github.workspace }}/o3de/python/get_python.sh
           fi
+        shell: bash
         
       - name: Configure
         run: >
-          cmake -B ${{ github.workspace }}\build
-          -S ${{ github.workspace }}\o3de
-          -DLY_3RDPARTY_PATH=${{ github.workspace }}\3rdParty
+          cmake -B ${{ github.workspace }}/build
+          -S ${{ github.workspace }}/o3de
+          -DLY_3RDPARTY_PATH=${{ github.workspace }}/3rdParty
           
       - name: Run scanner script
         run: >
-          python ${{ github.workspace }}\o3de\scripts\license_scanner\license_scanner.py
-          --config-file ${{ github.workspace }}\o3de\scripts\license_scanner\scanner_config.json
-          --license-file-path ${{ github.workspace }}\NOTICES-${{ matrix.os }}.txt
-          --package-file-path ${{ github.workspace }}\SPDX-Licenses-${{ matrix.os }}.json
-          --scan-path ${{ github.workspace }}\o3de ${{ github.workspace }}\3rdParty 
+          python ${{ github.workspace }}/o3de/scripts/license_scanner/license_scanner.py
+          --config-file ${{ github.workspace }}/o3de/scripts/license_scanner/scanner_config.json
+          --license-file-path ${{ github.workspace }}/NOTICES.txt
+          --package-file-path ${{ github.workspace }}/SPDX-Licenses.json
+          --scan-path ${{ github.workspace }}/o3de ${{ github.workspace }}/3rdParty 
       
       - name: Save artifacts
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.os }}-licenses
           path: |
-            ${{ github.workspace }}\NOTICES.txt
-            ${{ github.workspace }}\SPDX-Licenses.json       
+            ${{ github.workspace }}/NOTICES.txt
+            ${{ github.workspace }}/SPDX-Licenses.json       
   
   Merge:
     name: Merge licenses
@@ -107,10 +108,11 @@ jobs:
       - name: Merge licenses
         run: |
           for os in ${os_artifacts[@]); do
-            cp ${{ github.workspace }}\$os-licenses\SPDX-Licenses.json ${{ github.workspace }}\3p-package-source\SPDX-Licenses-$os.json
-            cp ${{ github.workspace }}\$os-licenses\NOTICES.txt ${{ github.workspace }}\3p-package-source\NOTICES-$os.json
-            cp ${{ github.workspace }}\3p-package-source\NOTICES.txt ${{ github.workspace }}\o3de\NOTICES.txt
+            cp ${{ github.workspace }}/$os-licenses/SPDX-Licenses.json ${{ github.workspace }}/3p-package-source/SPDX-Licenses-$os.json
+            cp ${{ github.workspace }}/$os-licenses/NOTICES.txt ${{ github.workspace }}/3p-package-source/NOTICES-$os.json
+            cp ${{ github.workspace }}/3p-package-source/NOTICES.txt ${{ github.workspace }}/o3de/NOTICES.txt
           done
+        shell: bash
           
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4.2.0
