--- a/.github/workflows/update-notices.yaml
+++ b/.github/workflows/update-notices.yaml
@@ -50,9 +50,9 @@ jobs:
         run: |
           if [ "$RUNNER_OS" == "Windows" ]; then
             o3de/python/get_python.bat
-          if [ "$RUNNER_OS" == "Ubuntu" ]; then
+          elif [ "$RUNNER_OS" == "Linux" ]; then
             apt-get update
-            apt-get install libxkbcommon-dev libxcb-xfixes0-dev
+            apt-get install -y libxkbcommon-dev libxcb-xfixes0-dev
             o3de/python/get_python.bat
           else
             o3de/python/get_python.sh
