--- a/.github/workflows/update-notices.yaml
+++ b/.github/workflows/update-notices.yaml
@@ -51,8 +51,8 @@ jobs:
           if [ "$RUNNER_OS" == "Windows" ]; then
             o3de/python/get_python.bat
           elif [ "$RUNNER_OS" == "Linux" ]; then
-            apt-get update
-            apt-get install -y libxkbcommon-dev libxcb-xfixes0-dev
+            sudo apt-get update
+            sudo apt-get install -y libxkbcommon-dev libxcb-xfixes0-dev
             o3de/python/get_python.bat
           else
             o3de/python/get_python.sh
