--- a/.github/workflows/update-notices.yaml
+++ b/.github/workflows/update-notices.yaml
@@ -53,7 +53,7 @@ jobs:
           elif [ "$RUNNER_OS" == "Linux" ]; then
             sudo apt-get update
             sudo apt-get install -y libxkbcommon-dev libxcb-xfixes0-dev
-            o3de/python/get_python.bat
+            o3de/python/get_python.sh
           else
             o3de/python/get_python.sh
           fi
