--- a/.github/workflows/update-notices.yaml
+++ b/.github/workflows/update-notices.yaml
@@ -106,6 +106,11 @@ jobs:
           ref: main
           path: 3p-package-source
       
+      - name: Configure environment
+        run: |
+            sudo apt-get update
+            sudo apt-get install -y dos2unix jq
+      
       - name: Download artifacts
         uses: actions/download-artifact@v3
       
