--- a/.github/workflows/update-notices.yaml
+++ b/.github/workflows/update-notices.yaml
@@ -117,7 +117,7 @@ jobs:
       - name: Merge licenses
         shell: bash
         run: |
-          jq -s '.[0] + .[1] + .[2] | unique | sort_by(.PackageName)' *-licenses/*.json > SPDX-Licenses.json
+          jq -s '.[0] + .[1] + .[2] | unique | sort_by(.PackageName)' *-licenses/SPDX-*.json > SPDX-Licenses.json
           cp 3p-package-source/NOTICES.txt NOTICES.txt
           dos2unix -q NOTICES.txt || true
           for os in ${os_artifacts[@]}; do
