--- a/.github/workflows/update-notices.yaml
+++ b/.github/workflows/update-notices.yaml
@@ -118,10 +118,11 @@ jobs:
         run: |
           # jq -s '.[0] + .[1] + .[2] | unique | sort_by(.PackageName)' *-licenses/SPDX-*.json > SPDX-Licenses.json
           cp 3p-package-source/NOTICES.txt NOTICES.txt
+          cp -f 3p-package-source/SPDX-Licenses.json SPDX-Licenses.json 
           # dos2unix -q NOTICES.txt || true
           for os in ${os_artifacts[@]}; do
             # dos2unix -q $os-licenses/NOTICES.txt || true
-            diff --line-format %L ./$os-licenses/NOTICES.txt NOTICES.txt > NOTICES-merged.txt
+            # diff --line-format %L ./$os-licenses/NOTICES.txt NOTICES.txt > NOTICES-merged.txt
             cp -f NOTICES-merged.txt NOTICES.txt
           done
           cp -f SPDX-Licenses.json 3p-package-source/SPDX-Licenses.json
