--- a/.github/workflows/update-notices.yaml
+++ b/.github/workflows/update-notices.yaml
@@ -125,7 +125,7 @@ jobs:
             echo Merging $os from $os-licenses
             ls -lah $os-licenses
             # diff --line-format %L $os-licenses/NOTICES.txt NOTICES.txt > NOTICES-merged.txt
-            cp -f NOTICES-merged.txt NOTICES.txt
+            cp -f $os-licenses/NOTICES.txt NOTICES-$os.txt
           done
           cp -f SPDX-Licenses.json 3p-package-source/SPDX-Licenses.json
           cp -f NOTICES.txt 3p-package-source/NOTICES.txt
