--- a/.github/workflows/update-notices.yaml
+++ b/.github/workflows/update-notices.yaml
@@ -134,6 +134,8 @@ jobs:
       - name: "Build Changelog"
         id: build_changelog
         uses: mikepenz/release-changelog-builder-action@v3.5.0
+        with:
+          path: 3p-package-source
           
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v4.2.3
