--- a/.github/workflows/update-notices.yaml
+++ b/.github/workflows/update-notices.yaml
@@ -43,8 +43,9 @@ jobs:
         uses: actions/checkout@v3
         with: 
           ref: main
+          fetch-depth: 0
           path: 3p-package-source
-      
+          
       - name: Configure environment
         shell: bash
         run: |
