--- a/.github/workflows/update-notices.yaml
+++ b/.github/workflows/update-notices.yaml
@@ -105,6 +105,7 @@ jobs:
         uses: actions/checkout@v3
         with: 
           ref: main
+          fetch-depth: 0
           path: 3p-package-source
           
       - name: Build Changelog
