Change url to canonical.o3de.org

--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -54,7 +54,7 @@ jobs:
       - name: Run build script
         run: >
           python3 3p-package-scripts/o3de_package_scripts/build_all_packages.py
-          --server_urls https://d3t6xeg4fgfoum.cloudfront.net
+          --server_urls https://canonical.o3de.org/
           --search_path 3p-package-source/package-system
       
       - name: Save artifacts
