Fix search path for root

--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -55,11 +55,11 @@ jobs:
         run: >
           python3 3p-package-scripts/o3de_package_scripts/build_all_packages.py
           --server_urls https://canonical.o3de.org/
-          --search_path ../3p-package-source/package-system
+          --search_path ../3p-package-source
       
       - name: Save artifacts
         uses: actions/upload-artifact@v3
         with:
           name: ${{ matrix.os }}-packages
           path: |
-            3p-package-source/package-system/**/packages/*
+            3p-package-source/package-system/packages/*
