--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -55,7 +55,7 @@ jobs:
         run: >
           python3 3p-package-scripts/o3de_package_scripts/build_all_packages.py
           --server_urls https://canonical.o3de.org/
-          --search_path ../3p-package-source
+          --search_path 3p-package-source
       
       - name: Save artifacts
         uses: actions/upload-artifact@v3
