--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -31,12 +31,12 @@ jobs:
       contents: write
     
     steps:
-      - name: Create Windows binary folders
+      - name: Maximize Windows build space
         if: matrix.os == 'windows'
         run: |
           New-Item c:\packages -ItemType 'Directory' -Force
-          New-Item .\3p-package-source\packages -ItemType 'Directory' -Force
-          New-Item -ItemType SymbolicLink -Name .\3p-package-source\packages -Target c:\packages -Force
+          New-Item 3p-package-source\packages -ItemType 'Directory' -Force
+          New-Item -ItemType SymbolicLink -Name 3p-package-source\packages -Target c:\packages -Force
       
       - name: Maximize Linux build space
         if: matrix.os == 'ubuntu'
