--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -34,8 +34,8 @@ jobs:
       - name: Maximize Windows build space
         if: matrix.os == 'windows'
         run: |
-          New-Item c:\packages -ItemType 'Directory' -Force
-          New-Item -ItemType SymbolicLink -Name 3p-package-source\packages -Target c:\packages -Force
+          New-Item c:\package-source -ItemType 'Directory' -Force
+          New-Item -ItemType SymbolicLink -Name 3p-package-source -Target c:\package-source -Force
       
       - name: Maximize Linux build space
         if: matrix.os == 'ubuntu'
@@ -72,16 +72,9 @@ jobs:
       - name: Run build script
         shell: bash
         run: |
-          if [ "$RUNNER_OS" == "Windows" ]; then
-            python3 3p-package-scripts/o3de_package_scripts/build_all_packages.py
-            --server_urls https://canonical.o3de.org/
-            --output_folder 3p-package-source/packages/
-            --search_path 3p-package-source
-          else
             python3 3p-package-scripts/o3de_package_scripts/build_all_packages.py
             --server_urls https://canonical.o3de.org/
             --search_path 3p-package-source
-          fi
       
       - name: Save artifacts
         uses: actions/upload-artifact@v3
