--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -71,7 +71,7 @@ jobs:
           
       - name: Run build script
         shell: bash
-        run: |
+        run: >
             python3 3p-package-scripts/o3de_package_scripts/build_all_packages.py
             --server_urls https://canonical.o3de.org/
             --search_path 3p-package-source
