--- a/.github/workflows/build-package.yaml
+++ b/.github/workflows/build-package.yaml
@@ -22,6 +22,7 @@ jobs:
   Scan:
     name: Build packages
     strategy:
+      fail-fast: false
       matrix:
         os: [windows, ubuntu, macos]
     runs-on: ${{ matrix.os }}-latest
